Fix z-index issue on advanced search: - ensure menu is over other inputs - ensure menu is over map - ensure datepicker is over other inputs
issue https://github.com/catima/catima/issues/393

--- a/app/assets/stylesheets/webpack/reference-editor/reference-editor.css
+++ b/app/assets/stylesheets/webpack/reference-editor/reference-editor.css
@@ -69,9 +69,16 @@
     margin-bottom: 20px;
 }
 
-.referenceEditor .css1pahdxg-control, .reference-search-container .css1pahdxg-control, .referenceEditor .select__menu, .reference-search-container .select__menu, .single-reference-filter {
+.referenceEditor .css1pahdxg-control, .reference-search-container .css1pahdxg-control,
+.referenceEditor .select__menu, .reference-search-container .select__menu,
+.single-reference-filter,
+.referenceEditor .css-26l3qy-menu, .reference-search-container .css-26l3qy-menu {
     z-index: 1001;
     text-align: left;
+}
+
+.css-2b097c-container {
+    position: initial !important;
 }
 
 .referenceEditor .single-reference-container .input-group-addon {
